--- a/Code/Evaluation/package.json
+++ b/Code/Evaluation/package.json
@@ -2,7 +2,7 @@
   "name": "tangen-statistics",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server.js"
+    "start": "node getData.js"
   },
   "main": "getData.js",
   "dependencies": {
